--- a/mood_recognizer/android/app/src/main/AndroidManifest.xml
+++ b/mood_recognizer/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mood_recognizer">
+   <uses-permission android:name="android.permission.INTERNET"/>
+   <uses-permission android:name="android.permission.RECORD_AUDIO"/>
    <application
         android:label="mood_recognizer"
         android:icon="@mipmap/ic_launcher">
