--- a/mood_recognizer/pubspec.yaml
+++ b/mood_recognizer/pubspec.yaml
@@ -23,11 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  avatar_glow: ^1.2.0
+  carousel_slider: ^3.0.0
   cupertino_icons: ^1.0.2
+  highlight_text: ^0.7.2
+  speech_to_text: ^3.1.0
+  tflite_flutter: ^0.5.0
+  url_launcher: ^5.7.10
+  vibration: ^1.7.3
 
 dev_dependencies:
   flutter_test:
@@ -35,7 +38,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -45,16 +47,15 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - images/
+    - images/animals/
+    - images/baby/
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
